# arnold

./: .gitignore  .hlint.yaml  Main.hs  README.markdown  arnold.cabal  stack.yaml
source/executable/: Main.hs
source/test/: Main.hs
