cabal-version: 2.4

name: arnold
version: 0.0.0.0

category: Web
data-files: favicon.ico
description: Arnold tracks workouts through Slack.
extra-source-files:
  .hlint.yaml
  brittany.yaml
  README.markdown
  stack.yaml
license-file: LICENSE.markdown
license: ISC
maintainer: Taylor Fausak
synopsis: Track workouts through Slack.

executable arnold
  autogen-modules: Paths_arnold
  build-depends:
    base ^>= 4.12.0,
    bytestring ^>= 0.10.8,
    cassava ^>= 0.5.1,
    containers ^>= 0.6.0,
    cryptonite ^>= 0.25,
    data-default ^>= 0.7.1,
    http-api-data ^>= 0.4,
    http-types ^>= 0.12.3,
    lucid ^>= 2.9.11,
    memory ^>= 0.14.18,
    raw-strings-qq ^>= 1.1,
    scotty ^>= 0.11.4,
    sqlite-simple ^>= 0.4.16,
    text ^>= 1.2.3,
    time ^>= 1.8.0,
    uuid ^>= 1.3.13,
    vector ^>= 0.12.0,
    wai ^>= 3.2.2,
    wai-extra ^>= 3.0.26,
    warp ^>= 3.2.27,
  default-language: Haskell2010
  ghc-options:
    -rtsopts
    -threaded
    -Weverything
    -Wno-implicit-prelude
    -Wno-safe
    -Wno-unsafe
  main-is: Main.hs
  other-modules: Paths_arnold
